--- a/SHM.MessageQueues.RabbitMQ/SHM.MessageQueues.RabbitMQ.csproj
+++ b/SHM.MessageQueues.RabbitMQ/SHM.MessageQueues.RabbitMQ.csproj
@@ -4,14 +4,14 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <Version>0.3</Version>
+        <Version>0.4</Version>
         <Authors>Tycho-SHM</Authors>
         <Title>SHM.MessageQueues.RabbitMQ</Title>
         <RepositoryUrl>https://github.com/Tycho-SHM/SHM.MessageQueues</RepositoryUrl>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="10.0.0-preview.1.25080.5" />
+      <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.2" />
       <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.2" />
       <PackageReference Include="RabbitMQ.Client" Version="7.1.0" />
     </ItemGroup>
